--- a/src/pages/signUp/style.css
+++ b/src/pages/signUp/style.css
@@ -171,6 +171,22 @@
 .disabled:hover{
     background-color: #ececec;
 }
+.sign-content-divider-container{
+    display: flex;
+    height: 20px;
+    margin-top: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+.sign-content-divider{
+    width: 135px;
+    height: 0;
+    border-bottom: 1px solid #b1b1b1;
+}
+.or{
+    margin: -3px 0 0 0;
+    color: #b1b1b1;
+}
 @media only screen and (max-width: 1100px) {
     .sign-right-container,
     .loader-full {
