--- a/src/pages/signUp/style.css
+++ b/src/pages/signUp/style.css
@@ -148,22 +148,7 @@
 .bold{
     font-weight: bold;
 }
-.loader{
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 5px;
-    background-color: #ffd500;
-    width: 0;
-    transition: width 1s;
-}
-.loader-half{
-    width: 220px;
-}
-.loader-full{
-    width: 540px;
-    transition: width 0.2s;
-}
+
 .disabled{
     background-color: #ececec;
     cursor: default;
@@ -195,15 +180,11 @@
     color: #b1b1b1;
 }
 @media only screen and (max-width: 1100px) {
-    .sign-right-container,
-    .loader-full {
-        width: 400px;
-    }
-    .loader-half{
-        width: 170px;
+    .sign-right-container{
+        width: 540px;
     }
     .sign-left-window{
-        width: calc(100% - 400px);
+        width: calc(100% - 540px);
     }
     .container-box-2{width: 90%;}
     .the{width: 45px;}
@@ -214,12 +195,8 @@
     .adidas{width: 45px;}
 }
 @media only screen and (max-width: 700px) {
-    .sign-right-container,
-    .loader-full  {
+    .sign-right-container{
         width: 100vw;
-    }
-    .loader-half{
-        width: 40vw;
     }
     .sign-left-window{
         display: none;
