--- a/src/components/accountActive/style/style.css
+++ b/src/components/accountActive/style/style.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 .fixed-240{
     width: 240px;
@@ -16,11 +17,15 @@
     margin: 20px 0;
 }
 .account-active-info-container{
-    width: 100%;
-    height: 50px;
+    height: 65px;
     display: flex;
     align-items: center;
-    margin-bottom: 12px;
+    width: calc(100% + 40px);
+    margin-left: -20px;
+    padding-left: 25px;
+}
+.account-active-info-container:hover{
+    background-color: #f0f0f0;
 }
 .account-active-avatar-container{
     width: 50px;
@@ -41,7 +46,7 @@
     border-bottom: 1px solid #d5d5d5;
 }
 .account-active-link {
-
+    text-decoration: none;
     height: 40px;
     width: calc(100% + 40px);
     margin-left: -20px;
@@ -53,10 +58,4 @@
 }
 .account-active-link-text{
     margin-left: 35px;
-}
-.underline{
-    border-bottom: 1px solid white;
-}
-.underline:hover{
-    border-bottom: 1px solid black;
 }
