--- a/src/components/profileInformation/style/style.module.css
+++ b/src/components/profileInformation/style/style.module.css
@@ -53,8 +53,9 @@
 }
 .contactEditable{
     width: calc(100% - 380px);
-    height: 460px;
-        border-radius: 4px;
+    height: fit-content;
+    border-radius: 4px;
     background-color: white;
+    padding-bottom: 7px;
     /* box-shadow: 0px 0px 253px -70px rgba(0,0,0,0.21); */
 }
