--- a/src/pages/signUp/style.css
+++ b/src/pages/signUp/style.css
@@ -105,6 +105,17 @@
     margin: -3px 0 0 0;
     color: #b1b1b1;
 }
+.validationMessage{
+
+    font-size: 13px;
+    margin: 6px 0;
+}
+.error{
+    color: #ff0043;
+}
+.success{
+    color: #70b740;
+}
 @media only screen and (max-width: 1100px) {
     .sign-right-container{
         width: 540px;
