--- a/src/components/account/style/style.css
+++ b/src/components/account/style/style.css
@@ -60,12 +60,15 @@
     justify-content: center;
     color: black;
     margin: 0 10px;
+    background-color: white;
+    cursor: pointer;
 }
 .button-white:hover{
     color: black;
    background-color:  #f2f2f2;
 }
 .button-orange{
+    cursor: pointer;
     font-size: 16px;
     width: 140px;
     height: 40px;
