added some Functionalities

--- a/src/components/leftMenu/style/style.css
+++ b/src/components/leftMenu/style/style.css
@@ -21,6 +21,7 @@
 .left-logo-container{
     width: 199px;
     height: 100%;
+    cursor: pointer;
     overflow-x: hidden;
     display: flex;
     align-items: center;
