--- a/src/components/rightPage/style/style.css
+++ b/src/components/rightPage/style/style.css
@@ -1,6 +1,7 @@
 .right-page-container{
     width: calc(100% - 75px);
-    height: 100%;
+    min-height: 100%;
+    height: fit-content;
     position: absolute;
     right: 0;
     transition: all 0.2s;
