--- a/src/components/topNav/style/style.module.css
+++ b/src/components/topNav/style/style.module.css
@@ -1,8 +1,18 @@
-.top-nav{
+.topNav{
     width: 100%;
     height: 75px;
     background-color: #fff;
     -webkit-box-shadow: 0px 9px 137px -28px rgba(0, 0, 0, 0.28);
     -moz-box-shadow: 0px 9px 137px -28px rgba(0, 0, 0, 0.28);
     box-shadow: 0px 9px 137px -28px rgba(0, 0, 0, 0.28);    
+}
+.leftLogo{
+    width: 199px;
+    height: 100%;
+    cursor: pointer;
+    overflow-x: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 75px;
 }
