--- a/src/components/editableContent/style/style.module.css
+++ b/src/components/editableContent/style/style.module.css
@@ -12,7 +12,6 @@
     color: #8a8a8a;
     font-size: 13px;
     margin-top: 6px;
-    width: 200%;
 }
 .editableAbsolute{
     position: absolute;
@@ -139,3 +138,42 @@
     cursor: pointer;
     margin-top: auto;
 }
+
+.multiplePhotoSectionContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.imagesContainer{
+    width: 400px;
+    height: 120px;
+    display: flex;
+    justify-content: flex-start;
+}
+.photoButtonsContainer{
+    width: 200px;
+    height: 100%;
+}
+.avatarSmall{
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+}
+.avatarL{
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+}
+
