--- a/src/components/m_ManufacturingCapability/style/style.module.css
+++ b/src/components/m_ManufacturingCapability/style/style.module.css
@@ -84,3 +84,10 @@
     justify-content: space-between;
     flex-direction: column;
 }
+
+.flexContainer{
+    display: flex;
+    width: 100%;
+    margin: 30px;
+    flex-direction: column;
+}
